Adds a picker to the AddDeckVC and unwind segues for a better flow

--- a/FlashStash/Resources/Info.plist
+++ b/FlashStash/Resources/Info.plist
@@ -59,6 +59,7 @@
 		<string>OpenSans-Regular.ttf</string>
 		<string>OpenSans-Semibold.ttf</string>
 		<string>OpenSans-SemiboldItalic.ttf</string>
+		<string>TragicMarker.otf</string>
 	</array>
 </dict>
 </plist>
