--- a/FlashStash/Resources/Info.plist
+++ b/FlashStash/Resources/Info.plist
@@ -15,15 +15,15 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.05</string>
+	<string>1.06</string>
 	<key>CFBundleVersion</key>
-	<string>1.05</string>
+	<string>1.06</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>May we use your camera?</string>
+	<string>FlashStash needs to use your camera to enable you to take photos to put on your Flash Cards</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>May we access your photo library?</string>
+	<string>FlashStash needs to access your library to enable you to put library photos on your Flash Cards</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>OpenSans-Bold.ttf</string>
