--- a/FlashStash/Resources/Info.plist
+++ b/FlashStash/Resources/Info.plist
@@ -21,9 +21,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>FlashStash needs to use your camera to enable you to take photos to put on your Flash Cards</string>
+	<string>FlashStash requests access to your camera to allow live photos to be placed on flash cards, The camera is only used when you wish to add a picture to your flash card. If you do not wish to grant this permission then you can still create flash cards with text only.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>FlashStash needs to access your library to enable you to put library photos on your Flash Cards</string>
+	<string>FlashStash requests access to your phones photo libary (camera roll) to allow pictures to be placed on flash cards, The photo library is only accessed when you wish to add a picture to your flash card. If you do not wish to grant this permission then you can still create flash cards with text only.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>OpenSans-Bold.ttf</string>
@@ -63,5 +63,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
